--- a/src/app/admin/add-edit-production/add-edit-production.component.css
+++ b/src/app/admin/add-edit-production/add-edit-production.component.css
@@ -224,3 +224,229 @@ span {
     padding-left: 10px;
   }
 }
+
+
+
+
+/* for matrial hand hiover  */
+
+
+.example-spacer {
+  flex: 1 1 auto;
+  margin-bottom: 20px;
+  color: rgb(20, 89, 92);
+  font-size: 18px;
+}
+
+.material-icons {
+  color: rgb(20, 89, 92);
+  margin-bottom: 20px;
+}
+
+mat-toolbar {
+  height: 40px;
+  background: none;
+  color: whitesmoke;
+  padding: 0px;
+  position: relative;
+}
+
+
+mat-form-field {
+  margin-right: 5px;
+  top: 5px;
+}
+
+#table_area {
+  width: 100%;
+  height: auto;
+}
+
+#table {
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+}
+
+.trth {
+  color: white;
+  background-color: #0f575a;
+  font-size: 16px;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  height: 35px;
+}
+
+tr:nth-child(even) {
+  background-color: whitesmoke;
+  height: 35px;
+}
+
+tr:nth-child(odd) {
+  height: 35px;
+}
+
+tr:hover {
+  background-color: #0f575a;
+  color: aliceblue;
+  cursor: pointer;
+}
+
+ng-container {
+  text-align: center;
+}
+
+.cotainer {
+  margin-top: -39px;
+}
+
+.mat-row:hover>.mat-cell {
+  color: white
+}
+
+.addbtn {
+  width: 100px;
+  margin: 0px 2px 1px 3px;
+  height: 34px;
+  background-color: #0f575a;
+  color: whitesmoke;
+  border-radius: 5px;
+}
+
+span {
+  color: #0f575a;
+}
+
+.count_search {
+  height: 40px;
+  width: auto;
+  float: right;
+  display: flex;
+  justify-content: space-between;
+  padding: 10px 10px 0px 10px;
+  box-sizing: border-box;
+  color: #0d5e58;
+
+}
+
+.search input {
+  border-bottom: 1px solid #0a4547;
+  outline: none;
+  padding: 6px 0px 6px 7px;
+  background-color: whitesmoke;
+  position: relative;
+  top: -5px;
+  left: 0px;
+}
+
+@media (min-width:768px) and (max-width:1100px) {
+
+  .column {
+      width: 100%;
+      height: auto;
+  }
+
+  .column mat-form-field {
+      width: 24.3%;
+  }
+
+}
+
+@media (min-width:421px) and (max-width:767px) {
+
+  .column {
+      width: 100%;
+      height: auto;
+  }
+
+  .column mat-form-field {
+      width: 100%;
+  }
+
+  .cotainer {
+      margin-top: 5px;
+      overflow-x: hidden;
+
+  }
+
+  .count_search {
+      width: 100%;
+      height: 40px;
+  }
+
+  #table_area {
+      overflow-x: auto;
+  }
+
+  form .column {
+      height: auto;
+  }
+
+}
+
+@media (max-width:420px) {
+  .column {
+      width: 100%;
+      height: auto;
+  }
+
+  .column mat-form-field {
+      width: 100%;
+  }
+
+  form .column {
+      height: auto;
+  }
+
+  .cotainer {
+      margin-top: 5px;
+      overflow-x: hidden;
+
+  }
+
+  #table_area {
+      overflow-x: auto;
+  }
+
+  .notice_text {
+      font-size: 13px;
+  }
+
+  .count_search {
+      width: 100%;
+      height: 40px;
+  }
+
+  .search {
+      width: 50%;
+  }
+
+  .count_search .notice_text {
+      font-size: 13px;
+  }
+
+  table th {
+      font-size: 13px;
+  }
+
+  table td {
+      font-size: 13px;
+  }
+
+  th.mat-header-cell:first-of-type {
+      padding-left: 13px;
+  }
+
+  th.mat-header-cell:last-of-type {
+      padding-right: 0px;
+      width: 0%;
+  }
+
+  td.mat-cell:first-of-type {
+      padding-left: 20px;
+  }
+
+  td.mat-cell:last-of-type {
+      padding-right: 0px;
+      padding-left: 10px;
+  }
+}
