for login page design full responsive

--- a/src/app/admin/account/account.component.html
+++ b/src/app/admin/account/account.component.html
@@ -1,6 +1,6 @@
 <div id="wrapper">
   <div class="view_notice">
-    <span class="notice_text">Account</span>
+    <span class="notice_text">Account Details</span>
     <mat-icon id="add_account" (click)="add_account()">add_circle</mat-icon>
   </div>
   <div class="count_search">
