--- a/src/app/admin/dashboard/dashboard.component.html
+++ b/src/app/admin/dashboard/dashboard.component.html
@@ -107,7 +107,7 @@
             </div>
         </a>
 
-        <a routerLink="/area-allocate">
+        <a routerLink="/area_allocate">
             <div class="thumbnail">
                 <mat-icon>location_on</mat-icon><br>
                 <span style="color:	rgb(255, 255, 255)"><b>{{total_area_alct}}</b></span><br>
