--- a/src/app/loginpage/loginpage.component.css
+++ b/src/app/loginpage/loginpage.component.css
@@ -1,95 +1,95 @@
 #wrapper {
     width: 100%;
     height: 100vh;
-    background-image: url(/assets/login4.jpg );
+    background-image: url(/assets/login3.jpg );
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    padding-top: 100px;
+    float: left;
 }
-
+.example-card{
+    max-width: 350px;
+    height: 400px;
+    /* position: fixed; */
+    /* top: 200px; */
+    /* left: 44%; */
+    margin: 200px auto;
+    box-sizing: border-box;
+    background-color: #14595c;
+    opacity: 0.8;
+}
+mat-card-header {
+    color:  #02c2cd;
+    font-size: 25px;
+    padding:20px 0px 0px 50px;
+    margin-bottom: 35px;
+}
+mat-card-content{
+    color: white;
+}
+mat-form-field {
+    width: 92%;
+    float: right;
+    margin-top: 10px;
+}
 ::placeholder {
     color: whitesmoke;
 }
 
-#main_area {
-    width: 25%;
-    height: 400px;
-    background-color: #14595c;
-    margin: 15% auto;
-    margin: auto ;
-    margin-left: 35%;
-    float: left;
-    opacity: 0.7;
-    border-radius: 5px;
-}
-
-mat-toolbar {
-    background-color: #14595c;
-    color: rgb(10, 246, 226);
-    padding: 10% 0% 0% 35%;
-    margin-bottom: 50px;
-    border-radius: 5px;
-
-}
-
-.icon_div {
-    width: 15%;
-    height: 130px;
-    float: left;
-}
-mat-icon{
-    color: white;
-
-}
-.icon_div mat-icon {
-    width: 100%;
-    margin: 24px 0px 0px 15px;
-}
-
-.icon {
-    padding-bottom: 45px;
-}
-
-.input_area {
-    width: 100%;
-    height: auto;
-}
-
-mat-form-field {
-    width: 70%;
-    float: left;
-    margin-top: 10px;
-}
-
-
 mat-form-field mat-label {
     color: rgb(243, 239, 239);
 }
+.icon_1{
+    position: relative;
+    top:25px;
+    right: 4px;
 
-.btn {
-    width: 100%;
-    margin-top: 10px;
-    border: none;
+}
+.icon_2{
+    position: relative;
+    top: 70px;
+    right: 4px;
 }
 
-.btn button {
-    width: 50%;
-    float: left;
-    background-color: #54d8c4;
+mat-card-actions{
+    width: 100%;
+    height: auto;
+    margin-left:110px;
+}
+mat-card-actions button{
+    width: 80px;
     color: white;
-    margin-left: 25%;
-}
-
-p {
-    width: 100%;
-    text-align: center;
-    font-size: 18px;
+    background-color: #5ad2d8;
     margin-top: 20px;
-    color: white;
 }
-/* @media (max-width:420px){
-    #main_area{
-        width: 80%;
+p{
+    color: white;
+    font-size: 20px;
+    text-align: center;
+}
+.footer{
+    width: 100%;
+    height: 40px;
+    background-color:#14595c;
+    color: white;
+    text-align: center;
+    line-height: 40px;
+    position: fixed;
+    bottom: 0px;
+}
+@media (max-width:460px){
+    .example-card{
+        width: 310px;
+        height: 400px;
+       
     }
-} */
+    mat-form-field{
+        width: 90%;
+    }
+    mat-card-header{
+        font-size: 20px;
+    }
+    p{
+        font-size: 18px;
+    }
+}
