--- a/src/app/loginpage/loginpage.component.html
+++ b/src/app/loginpage/loginpage.component.html
@@ -1,31 +1,29 @@
 <div id="wrapper">
+    <mat-card class="example-card">
+        <mat-card-header>
+          Admin Login
+        </mat-card-header>
+        <mat-card-content>
+                <mat-icon class="icon_1">account_circle</mat-icon>
 
-    <div id="main_area">
-        <mat-toolbar>
-            Admin Login
-        </mat-toolbar>
-        <div class="icon_div">
-            <mat-icon class="icon">account_circle</mat-icon>
-            <mat-icon>lock</mat-icon>
-        </div>
-        <div class="input_area">
-            <mat-form-field class="example-full-width">
-                <mat-label>Username</mat-label>
-                <input matInput placeholder="Enter your name">
-            </mat-form-field>
-            <mat-form-field appearance="fill">
-                <mat-label>Enter your password</mat-label>
-                <input matInput [type]="hide ? 'password' : 'text'" placeholder="Enter your password">
-                <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'"
-                    [attr.aria-pressed]="hide">
-                    <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
-                </button>
-            </mat-form-field>
-        </div>
-        <div class="btn">
+                <mat-form-field class="example-full-width">
+                    <mat-label>Username</mat-label>
+                    <input matInput placeholder="Enter your name">
+                </mat-form-field>
+                <mat-icon class="icon_2">lock</mat-icon>
+                <mat-form-field appearance="fill">
+                    <mat-label>Enter your password</mat-label>
+                    <input matInput [type]="hide ? 'password' : 'text'" placeholder="Enter your password">
+                    <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'"
+                        [attr.aria-pressed]="hide">
+                        <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+                    </button>
+                </mat-form-field>
+        </mat-card-content>
+        <mat-card-actions>
             <button mat-button>Login</button>
-        </div>
-        <p>Forgot password</p>
-
-    </div>
+        </mat-card-actions>
+        <p>Forgot Password</p>
+      </mat-card>
+      <div class="footer">Powered By :- Green Soft</div>
 </div>
