--- a/src/app/admin/sale/sale.component.html
+++ b/src/app/admin/sale/sale.component.html
@@ -67,10 +67,10 @@
           <ng-container matColumnDef="Action">
             <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Action</th>
             <td class="data" mat-cell *matCellDef="let row">
-              <mat-icon [hidden]="row.status !=1" (click)="onPrint()">print</mat-icon>
-              <mat-icon [hidden]="row.status !=1">visibility</mat-icon>
+              <mat-icon [hidden]="row.status !=1" (click)="onPrint(row)">print</mat-icon>
+              <mat-icon [hidden]="row.status !=1" (click)="on_draf_bill(row)">visibility</mat-icon>
               <mat-icon [hidden]="row.status !=0" (click)="on_draf_bill(row)">description</mat-icon>
-              <mat-icon>cancel</mat-icon>
+              <mat-icon (click)="on_cancel_bill()">cancel</mat-icon>
             </td>
           </ng-container>
 
