sale bill complet

--- a/src/app/admin/billpage/billpage.component.html
+++ b/src/app/admin/billpage/billpage.component.html
@@ -1,23 +1,25 @@
-<div id="wrapper">
+<div id="wrapper" >
     <span>
     <table style="width:100%;" class="tbl">
         <tr>
-          <td><button mat-dialog-close >Back</button></td>
+          <td><button mat-dialog-close  >Back</button></td>
           <td></td>
-          <td style="text-align: right;">Print</td>
+          <td style="text-align: right;"><button  (click)="onprint()" >Print</button></td>
         </tr>
         <tr>
           
           <td></td>
-          <td class="name_area">ADITYA ARDHIYA</td>
+          <td class="name_area">ADITY ARADHAYA</td>
           <td >Mob:- 6589785421<br>
              <span style="opacity:0 ;">..........</span> 6532542165  </td>
         </tr>
         <tr>
           <td></td>
-          <td style="text-align: center;"><b>Address:</b> Deghi Kala , Hajipur , Vaishali (Bihar-844101)</td>
+          <td style="text-align: center;">Address:- Deghi Kala , Hajipur , Vaishali (Bihar-844101)</td>
           <td></td>
-        </tr>
+        </tr> 
+        <br>
+        
         <tr>
           <td></td>
           <td><b>Bill No: </b> {{ saledata.sale_bill_no}}</td>
@@ -46,20 +48,20 @@
             <th>Amount</th>
         </tr>
         <tr *ngFor="let sale of des_data ; let i = index">
-            <td>{{i+1}}</td>
-            <td>{{sale.product_name
-            }}</td>
-            <td>{{sale.sale_dec_quantity}}</td>
-            <td>{{sale.sale_dec_total_amount}}</td>
+            <td class="col1">{{i+1}}</td>
+            <td class="col2">{{sale.product_name}}</td>
+            <td class="col3">{{sale.sale_dec_quantity}}</td>
+            <td class="col4">{{sale.sale_dec_total_amount}}</td>
         </tr>
       </table>
 
       <table class="final_amount">
-        <tr >
-           <th><span style="opacity:0 ;">..............</span></th>
-           <th><span style="opacity:0 ;">...............</span></th>
-            <th>Total:</th>
-            <th >75200</th>
+        <tr  >
+           <th class="col1"></th>
+           <th class="col2"></th>
+            <th class="col3"> Total:</th>
+            <th  class="col4">{{saledata.sale_total_amount
+              | currency:'INR':true}}</th>
         </tr>
       </table>
       </div><br><br>
@@ -70,13 +72,12 @@
         <tr><td>4. Good once sold shall not be returned.</td></tr>
         <tr><td>5. Good once sold shall not be returned.</td></tr>
         <tr><td>5. Good once sold shall not be returned.</td></tr>
-        <tr style="text-align: right;width: 100%;"><td>Authorised Signatory </td></tr>
+        <tr><td style="text-align: right;"> Authorised Signatory  <span style="opacity:0 ;">..........</span> </td></tr>
       </table>
 </div>
 
-<table id="row_tbl">
-    <td><span style="opacity:0 ;">..............</span></td>
-    <td></td>
-    <td></td>
-    <td></td>
-</table>
+<div id="background_div">
+    <div class="box1"></div>
+    <div class="box2"></div>
+    <div class="box3"></div>
+</div>
