--- a/src/app/admin/billpage/billpage.component.css
+++ b/src/app/admin/billpage/billpage.component.css
@@ -1,24 +1,30 @@
 #wrapper{
-    width: 50vw;
+    width: 100vw;
+    width: 100%;
     height: 100vh;
-    border: 0.2px solid rgb(216, 156, 156);
-
 }
 .name_area{
     height: 70px;
     font-size: 60px;
     text-align: center;
 }
-span table, th, td {
+
+.tbl  table {
     border:0.1px solid rgb(247, 242, 242);
+    font-size: 18px;
+  }
+  .tbl td{
+    border:0.1px solid rgb(247, 242, 242);
+    height: 25px;
   }
 th{
     text-align: center;
+    font-size: 18px;
 }
 .tbl_calc{
     width: 100%;
     text-align: center;
-    border: 1px solid black;
+    border: 1px solid rgba(0, 0, 0, 0.698);
     
 }
 .tbl_calc td {
@@ -29,40 +35,82 @@ th{
 }
 
 .final_amount{
-    width:50%;
-    position: fixed;
-    bottom: 200px;
+    width: calc(100% - 46px);
+    position: absolute;
+    bottom: 270px;
 }
 .final_amount td{
-    text-align: right;
-    border: 1px solid black;
+    border: 1px solid rgba(0, 0, 0, 0.698);
+}
+.final_amount tr{
+    width:90%;
+    border: 1px solid rgba(0, 0, 0, 0.698); 
+
+   
 }
 .tbl_button{
-    position: fixed;
-    bottom: 10px;
-    width: 50%;
+    position: absolute;
+    bottom: 50px;
+    width: 100%;
 }
 .middel_area{
     width: 100%;
     height: 300px;
-    border: 1px solid gray;
+  
   
 }
 .description_box{
    width: 100%;
    height: 100%;
+  
+}
+button{
+    z-index: 10;
 }
 
-#row_tbl{
-    width: 50%;
-    height: 280px;
-    border: 1px solid greenyellow;
-    position: fixed;
-    bottom: 220px;
+
+
+.col1{
+    width: 10%;
 }
-#row_tbl td{
+.col2{
+    width: 55%;
+}
+.col3{
+    width: 10%;
+}
+.col4{
     width: 25%;
-    height: 100%;
-    border: 1px solid black;
 }
 
+#background_div{
+    width: calc(100% - 46px);
+    height: 500px;
+    position: absolute;
+    top: 255px;
+    left: 23px;
+    border: 1px solid rgba(0, 0, 0, 0.698);   
+}
+.box1{
+    width: 10%;
+    height: 500px;
+    border-right: 1px solid rgba(0, 0, 0, 0.698);
+    float: left;
+}
+.box2{
+    width: 55%;
+    height: 500px;
+    border-right: 1px solid rgba(0, 0, 0, 0.698);
+    float: left;
+}
+.box3{
+    width: 10%;
+    height: 500px;
+    border-right: 1px solid rgba(0, 0, 0, 0.698);
+    float: left;
+}
+@media print {
+    button {
+      display: none;
+    }
+  }
