--- a/src/app/loginpage/loginpage.component.css
+++ b/src/app/loginpage/loginpage.component.css
@@ -1,7 +1,8 @@
 #wrapper {
     width: 100%;
     height: 100vh;
-    background-image: url(/assets/login3.jpg );
+    /* background-image: url(/assets/login3.jpg ); */
+    background-image: url(http://adityaradhaya.com/assets/login3.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
