--- a/src/app/admin/sale-cancel/sale-cancel.component.html
+++ b/src/app/admin/sale-cancel/sale-cancel.component.html
@@ -1,6 +1,6 @@
 <div id="wrapper">
     <div class="view_notice">
-        <span class="notice_text">Sale cancel bill :</span>
+        <span class="notice_text">Sale cancel Details :</span>
     </div>
     <div class="count_search">
         <span class="notice_tex">Total :</span>
