--- a/src/app/admin/purchase-cancel/purchase-cancel.component.html
+++ b/src/app/admin/purchase-cancel/purchase-cancel.component.html
@@ -1,6 +1,6 @@
 <div id="wrapper">
   <div class="view_notice">
-    <span class="notice_text">Cancelled bill list :</span>
+    <span class="notice_text">Purchase Cancel Details :</span>
   </div>
   <div class="count_search">
     <span class="notice_tex"> Total :</span>
