--- a/src/app/admin/sale-cancel/sale-cancel.component.css
+++ b/src/app/admin/sale-cancel/sale-cancel.component.css
@@ -1,6 +1,7 @@
-#wrapper{
+#wrapper {
     margin-top: 63px;
 }
+
 .view_notice {
     height: 40px;
     width: 100%;
@@ -12,50 +13,38 @@
     box-sizing: border-box;
 }
 
-#add_customer {
-    position: relative;
-    top: -5px;
-    left: 2px;
-    cursor: pointer;
-}
-
 .notice_text {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-}
-.notice_tex{
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    padding-top: 10px;
+    font-style: italic;
+    font-size: 16px;
 }
 
 .count_search {
-    height: 50px;
+    height: 40px;
     width: 100%;
     display: flex;
     justify-content: space-between;
-    padding: 10px;
+    padding: 10px 10px 0px 10px;
     box-sizing: border-box;
     color: #0d5e58;
+}
+
+.count_search .notice_text {
+    font-size: 16px;
 }
 
 .search input {
     border-bottom: 1px solid #0a4547;
     outline: none;
-    padding: 5px;
+    padding: 7px 2px 6px 7px;
     background-color: whitesmoke;
     position: relative;
-    top: 11px;
+    top: -5px;
     left: 0px;
 }
 
-mat-icon {
-    background-color: transparent;
-    border: none;
-    font-size: 20px;
-    line-height: 30px;
-}
-
 #table {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     border-collapse: collapse;
     width: 100%;
 }
@@ -64,8 +53,8 @@ mat-icon {
     color: white;
     background-color: #0f575a;
     height: 40px;
-    font-weight: bold;
-    padding-left: 53px;
+    font-size: 16px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 tr:nth-child(even) {
@@ -83,12 +72,12 @@ tr:hover {
     cursor: pointer;
 }
 
-ng-container {
-    text-align: center;
+.mat-row:hover>.mat-cell {
+    color: white
 }
 
-.cotainer {
-    margin-top: 5px;
+ng-container {
+    text-align: center;
 }
 
 .mat-form-field {
@@ -96,90 +85,87 @@ ng-container {
     width: 100%;
 }
 
-.data:hover {
-    color: white;
-}
-/* -------------------------------------------------------------------------------------------------------------------------------- */
-@media(min-width: 350px) and (max-width: 420px){
-    .search input{
-        width: 100px;
-    } 
-    #wrapper{
+/* //////////////////////////table media q//////////////////////////// */
+@media(min-width:461px) and (max-width:1180px) {
+    #wrapper {
         overflow-x: hidden;
     }
-    .cotainer{
+
+    .cotainer {
         overflow-x: auto;
     }
-    mat-paginator{
+
+    mat-paginator {
         position: absolute;
         width: 100%;
     }
 
-}
-@media(min-width: 420px) and (max-width: 720px){
-    .search input{
-        width: 150px;
+    .notice_text {
+        font-size: 14px;
     }
 
-    #wrapper{
+    .count_search .notice_text {
+        font-size: 14px;
+    }
+
+    table th {
+        font-size: 14px;
+    }
+
+    table td {
+        font-size: 14px;
+    }
+
+}
+
+@media (max-width:460px) {
+    #wrapper {
         overflow-x: hidden;
     }
-    .cotainer{
+
+
+    .cotainer {
         overflow-x: auto;
     }
-    mat-paginator{
+
+    mat-paginator {
         position: absolute;
         width: 100%;
     }
-}
-@media (min-width: 720px) and (max-width: 840px){
-    .search input{
-        width: 150px;
+
+
+    .notice_text {
+        font-size: 13px;
     }
 
-    #wrapper{
-        overflow-x: hidden;
-    }
-    .cotainer{
-        overflow-x: auto;
-    }
-    mat-paginator{
-        position: absolute;
-        width: 100%;
-    } 
-}
-
-@media(min-width: 840px) and (max-width: 1040px){
-    .search input{
-        width: 150px;
-        margin-left: 390px;
+    .count_search .notice_text {
+        font-size: 13px;
     }
 
-    #wrapper{
-        overflow-x: hidden;
-    }
-    .cotainer{
-        overflow-x: auto;
-    }
-    mat-paginator{
-        position: absolute;
-        width: 100%;
-    } 
-}
-@media(min-width: 1040px) and (max-width: 1240px){
-    .search input{
-        width: 150px;
-        margin-left: 618px;
+    table th {
+        font-size: 13px;
     }
 
-    #wrapper{
-        overflow-x: hidden;
+    table td {
+        font-size: 13px;
     }
-    .cotainer{
-        overflow-x: auto;
+
+    th.mat-header-cell:first-of-type {
+        padding-left: 13px;
     }
-    mat-paginator{
-        position: absolute;
-        width: 100%;
-    } 
+
+    th.mat-header-cell:last-of-type {
+        padding-right: 0px;
+        width: 0%;
+    }
+
+    td.mat-cell:first-of-type {
+        padding-left: 20px;
+    }
+
+    td.mat-cell:last-of-type {
+        padding-right: 0px;
+        padding-left: 10px;
+    }
+
 }
