--- a/src/app/loginpage/loginpage.component.css
+++ b/src/app/loginpage/loginpage.component.css
@@ -64,7 +64,7 @@ mat-card-actions button{
 }
 p{
     color: white;
-    font-size: 20px;
+    font-size: 16px;
     text-align: center;
 }
 .footer{
@@ -76,6 +76,10 @@ p{
     line-height: 40px;
     position: fixed;
     bottom: 0px;
+}
+.footer a{
+    text-decoration: none;
+    color: white;
 }
 @media (max-width:460px){
     .example-card{
@@ -90,6 +94,6 @@ p{
         font-size: 20px;
     }
     p{
-        font-size: 18px;
+        font-size: 14px;
     }
 }
