--- a/src/app/admin/expense/expense.component.html
+++ b/src/app/admin/expense/expense.component.html
@@ -4,7 +4,7 @@
     <mat-icon id="add_dues" (click)="add_expense()">add_circle</mat-icon>
   </div>
   <div class="count_search">
-    <span class="notice_text"> Total :</span>
+    <span class="notice_text"> Total : {{expense_count}}</span>
     <div class="search">
       <input matInput (keyup)="applyFilter($event)" placeholder="Search" #input>
     </div>
@@ -34,9 +34,9 @@
             <td class="data" mat-cell *matCellDef="let row">{{row.expense_pay_to}}</td>
           </ng-container>
 
-          <ng-container matColumnDef="expense_contact">
+          <ng-container matColumnDef="expense_mobile">
             <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Contact</th>
-            <td class="data" mat-cell *matCellDef="let row">{{row.expense_contact}}</td>
+            <td class="data" mat-cell *matCellDef="let row">{{row.expense_mobile}}</td>
           </ng-container>
 
           <ng-container matColumnDef="expense_date">
@@ -49,10 +49,15 @@
             <td class="data" mat-cell *matCellDef="let row">{{row.expense_desc}}</td>
           </ng-container>
 
+          <ng-container matColumnDef="action">
+            <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Action</th>
+            <td class="data" mat-cell *matCellDef="let row"><mat-icon (click)="edit_expense(row)">edit</mat-icon></td>
+          </ng-container>
+
           <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
           <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
           <tr class="mat-row" *matNoDataRow>
-            <td class="mat-cell" colspan="4">No data show"{{input.value}}"</td>
+            <td class="mat-cell" colspan="8">No data show"{{input.value}}"</td>
           </tr>
         </table>
         <mat-paginator #paginatorRef [pageSizeOptions]="[10, 25, 100]"
