--- a/src/app/admin/add-edit-expense/add-edit-expense.component.css
+++ b/src/app/admin/add-edit-expense/add-edit-expense.component.css
@@ -7,9 +7,11 @@
 .column mat-form-field {
   width: 90%;
 }
+
 form {
   padding-left: 18px;
 }
+
 .example-spacer {
   flex: 1 1 auto;
   margin-bottom: 20px;
@@ -29,18 +31,21 @@ mat-toolbar {
   padding: 0px;
   position: relative;
 }
+
 .column_1 mat-form-field {
   width: 382px;
 }
-#main_button{
+
+#main_button {
   width: 190px;
   margin: auto;
 }
+
 .reset_btn {
   float: left;
   width: 80px;
   height: 40px;
- 
+
 }
 
 .add_btn {
@@ -49,10 +54,23 @@ mat-toolbar {
   float: right;
   background-color: green;
   color: white;
-} 
+}
+
 
 .date_box {
-  width: 200px;
+  width: 180px;
+  border: none;
+  border-radius: 3px 3px 0px 0px;
+  color: gray;
+  border-bottom: 1px solid gray;
+  background-color: #f5f5f5;
+  padding: 16px 0px 0px 20px;
+  height: 52px;
+
+}
+
+.exp_emp_conect{
+  margin-top: 20px;
 }
 
 @media (max-width:768px) {
@@ -64,9 +82,11 @@ mat-toolbar {
   .column mat-form-field {
     width: 100%;
   }
-  .column_1 mat-form-field{
+
+  .column_1 mat-form-field {
     width: 100%;
   }
+
   form {
     padding: 0px;
     margin: 0px;
